--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,36 @@
 
+     <nav class="main-nav">
+          <a href="#">Nav Link 1</a>
+          <a href="#">Nav Link 2</a>
+          <a href="#">Nav Link 3</a>
+          <a data-scroll data-options='{ "speed": 3000, "easing": "easeInOutQuad" }' href="#bazinga">Quad</a>
+          <%= link_to "LOGOUT", logout_path %>
+        </nav>
+      </p> 
+      <br> 
+
+
+    <div class="parallax-window text-center" data-parallax="scroll" data-image-ng-src="retina1.jpg" data-position-X="right"> 
+    <h1>Hello World</h1>
+    <div class="jeremylin"></div>
+    
+
+    </div>
+
+    <div class="cover"> </div> 
+
+
+
+    <div class="parallax-window text-center" data-parallax="scroll" data-image-src="../images/retina2.jpg">
+   
+
+    </div>
+
+
+
 <% if current_user  %>
-<%= current_user.username  %>
+<%= current_user.username  %> 
+
 
 <h2>Login</h2>
 
@@ -21,6 +51,12 @@
 
 </div>
 
+
+<div ng-show="vm.players.length == 5"> 
+  <button ng-click="vm.resetplayers()" type="button" class="btn btn-info">RESET</button> 
+
+</div> 
+
 <p>Selected Team</p>
 
 
@@ -33,14 +69,6 @@
 </div> 
 
 <%= link_to "LOGOUT", logout_path %>
-
-
-
-
-
-
-
-
 
 
 <% else %>
@@ -58,5 +86,11 @@
 
 
 <% end %>
+
+<br>
+
+<hr> 
+
+<div id="bazinga">scroll here></div> 
 
 
