--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,7 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+$main: white; 
+
 
 h1 {
   font-family: graduate, cursive; 
@@ -9,78 +11,109 @@ h2 {
   font-family: graduate, cursive; 
 }
 
-// body {
-//   background: peachpuff; 
-// }
+* {
+  box-sizing: border-box; 
+}
+body {
+  margin: 0; 
+  padding-top: 250px; 
+  background: grey; 
+}
+.navpadding {
+
+}
+
+header {
+  height: 300px;
+  padding-top: 50px;
+  background: #f07057;
+}
+
+.main-nav,
+.main {
+  position: relative; 
+}
 
 .main-nav {
-  background: #fff;
+  background: green;
   height: 80px;
   z-index: 150;
   margin-bottom: -80px;
-  box-shadow: 0 2px 3px rgba(0,0,0,.4);
+  border-bottom: 10px solid white; 
+  font-family: graduate, cursive; 
+  font-size: 10px; 
+
+  #leftnav {
+    float: left; 
+  }
+
+  #rightnav {
+    float: right; 
+  }
+
 }
 
+header,
+.main-nav-scrolled {
+  position: fixed;
+  width: 100%;
+  top: 0;
+}
+.main {
+  background: #f2f2e8;
+  padding: 110px 50px 50px;
+}
+
+
 .nav {
+
   position: absolute;
   width: 100%;
   background-color: rgba(#6D9F94,.8);
   box-shadow: 0 0 2px rgba(#000,.8);
+  text-align: center; 
+  vertical-align: middle; 
+
 }
-ul {
-  margin: 0;
-  padding-left: 0;
-  text-align: center;
-  word-spacing: .5em;
+
+.links {
+ margin-top: auto; 
+ margin-bottom: auto; 
 }
+
 li {
   list-style: none;
   display: inline-block;
+  padding-left: 5px; 
+
+
   a {
     display: inline-block;
     padding: 1em .1em;
-    color: #EFEFBF;
+    color: $main; 
     text-decoration: none;
-    font-weight: bold;
     text-shadow: 1px 1px #215D6E;
   }
 }
 
-
-.parallax-window {
-    min-height: 700px;
-    width: 100%; 
-    height: 100%; 
-
-    background: transparent;
-    color: red;
-    font-size: 30px;
-    text-align: center;
-    z-index: 11; 
-
+header,
+.main-nav-scrolled {
+  position: fixed;
+  width: 100%;
+  top: 0;
 }
 
-.cover {
-  width: 100%; 
-  height: 400px; 
-/*  background-color: white; */
+.main {
+  background: #f2f2e8;
+  padding: 110px 50px 50px;
+  column-count: 2;
+  column-gap: 40px;
 }
 
-h1 {
-  padding: 0;
-  margin: 0;
-}
-
-.jeremylin {
-  background-color: black;
-  background: url("http://24.media.tumblr.com/tumblr_lzmp6jSDRi1qcky4ko3_400.gif");
+#startingfive {
+  background: grey; 
   background-size: cover; 
-  background-repeat: no-repeat; 
-  background-position: center;
-  background-color: #EFEFEF;
-  opacity: 0.5;
-  width: 500px;
-  height: 500px;
-  z-index: 11; 
+  height: 500px; 
+  width: 100%; 
 }
 
