--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,11 +1,27 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "animate.css"; 
+
 $main: white; 
 
 
 h1 {
   font-family: graduate, cursive; 
+  font-weight: bold; 
+  vertical-align: middle; 
+  color: white; 
+  font-size: 40px; 
 }
+.logo {
+  width: 500px; 
+  position: relative; 
+  margin-left: auto; 
+  margin-right: auto; 
+  clear: both; 
+    z-index: 20; 
+    
+}
+
 
 h2 {
   font-family: graduate, cursive; 
@@ -16,17 +32,14 @@ h2 {
 }
 body {
   margin: 0; 
-  padding-top: 250px; 
-  background: grey; 
-}
-.navpadding {
+  padding-top: 610px; 
 
 }
 
 header {
-  height: 300px;
+  height: 660px;
   padding-top: 50px;
-  background: #f07057;
+  background: rgb(52, 152, 219);
 }
 
 .main-nav,
@@ -38,6 +51,7 @@ header {
   background: green;
   height: 80px;
   z-index: 150;
+  padding-top: 15px; 
   margin-bottom: -80px;
   border-bottom: 10px solid white; 
   font-family: graduate, cursive; 
@@ -59,11 +73,12 @@ header,
   width: 100%;
   top: 0;
 }
+
 .main {
   background: #f2f2e8;
-  padding: 110px 50px 50px;
-}
+  padding-top: 110px; 
 
+}
 
 .nav {
 
@@ -74,11 +89,6 @@ header,
   text-align: center; 
   vertical-align: middle; 
 
-}
-
-.links {
- margin-top: auto; 
- margin-bottom: auto; 
 }
 
 li {
@@ -96,24 +106,24 @@ li {
   }
 }
 
-header,
-.main-nav-scrolled {
-  position: fixed;
-  width: 100%;
-  top: 0;
-}
-
-.main {
-  background: #f2f2e8;
-  padding: 110px 50px 50px;
-  column-count: 2;
-  column-gap: 40px;
-}
-
 #startingfive {
   background: grey; 
   background-size: cover; 
   height: 500px; 
   width: 100%; 
+}
+
+footer {
+
+  height: 50px;
+  width: 100%; 
+  z-index: 150; 
+  text-align: center;
+  position: absolute; 
+  bottom: 0; 
+  margin: 0; 
+  background-color: green; 
+  border-bottom: 5px solid black; 
+
 }
 
