--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,15 +6,16 @@
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
   <link href='http://fonts.googleapis.com/css?family=Graduate' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
 
 </head>
-<body ng-controller="ctrl as vm">
 
 
-      <div class="text-center"> 
+
+  <body ng-controller="ctrl as vm">
+    <div class="text-center"> 
        <%= yield %>
-       </div> 
-    
-
-</body>
+    </div> 
+  </body>
+  
 </html>
