--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,12 +12,19 @@ $font: graduate, cursive;
 $font2: quicksand, sans-serif; 
 $main_yellow: #F9BF3B; 
 
-// .normalink {
-//   color: red; 
-//   text-decoration: none; 
+* {
+  box-sizing: border-box; 
+  padding: 0;
+  margin: 0;
+}
 
-  
-// }
+body {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  padding-top: 530px; 
+
+}
 
 h1 {
   font-family: graduate, cursive; 
@@ -30,6 +37,17 @@ h1 {
   span {
     color: white; 
     font-size: 50px; 
+  }
+}
+
+.normalink {
+  font-family: $font; 
+  font-size: 20px; 
+  color: $main_yellow; 
+
+  &:hover {
+    text-decoration: underline;
+    color: white; 
   }
 }
 
@@ -73,7 +91,7 @@ h1 {
 #playa3 {
   position: absolute; 
   right: -5px; 
-  bottom: 180px; 
+  bottom: 200px; 
   z-index: 4; 
 }
 
@@ -86,13 +104,13 @@ h1 {
 // player 4
 #playa4 {
   position: absolute; 
-  right: 170px;  
+  right: 130px;  
   bottom: 100px; 
   z-index: 300; 
 }
 
 .playa4 {
- width: 220px; 
+ width: 230px; 
 }
 // player 4
 
@@ -127,20 +145,6 @@ h3 {
   }
 }
 
-* {
-  box-sizing: border-box; 
-  padding: 0;
-  margin: 0;
-}
-
-body {
-  width: 100%;
-  margin: 0;
-  padding: 0;
-  padding-top: 530px; 
-
-}
-
 header {
   height: 580px;
   padding-top: 50px;
@@ -160,7 +164,7 @@ header {
   z-index: 150;
   padding: 0; 
   margin-bottom: -80px;
-  border-bottom: 10px solid white; 
+  border-bottom: 10px solid $main_yellow; 
 
 
   #leftnav {
@@ -178,6 +182,10 @@ header {
             display: inline-block;
             padding: 1em .1em;
             color: $main_yellow; 
+
+              &:hover {
+                color: white; 
+              }
   
             }
 
@@ -210,12 +218,10 @@ header {
           }
       }
 
-   
-
-
-
+   #currentuser {
+    font-family: $font; 
+   }
   }
-
 }
 
 span#logout {
@@ -244,17 +250,99 @@ span#ultimate {
   text-shadow: 1px 1px 1px green; 
 }
 
+.about {
+  
+  
+  margin-top: -20px; 
+  padding-top: 20px; 
+  background: url("basketballcourt.jpg");
+  background-size: cover; 
+  background-repeat: no-repeat;
+  height: 580px; 
+
+  .aboutcontainer {
+    text-align: center; 
+    margin-top: auto; 
+    margin-bottom: auto; 
+    padding-top: auto; 
+    padding-bottom: auto; 
+    width: 100%;
+    height: 500px; 
+    background-color: white; 
+    border-radius: 30px; 
+    border: 5px solid $main_yellow; 
+
+    hr#dashed {
+
+      border: 2px dashed $main_yellow; 
+    }
+  }
+
+}
+
 h1#aboutshout {
+  font-size: 30px;
+
+}
+
+#ultimate {
+  width: 150px; 
+}
+
+p.aboutext {
+    position: center; 
+    font-size: 17px; 
+    font-family: $font2; 
+    font-weight: bold; 
+    text-align: justify; 
+    text-justify: inter-word;
+    padding: 30px; 
+}
+
+.aboutsignup {
+  font-size: 40px; 
+  font-family: $font; 
+  color: $main_yellow; 
+
+  &:hover {
+    color: $main_yellow; 
+  }
+
+}
+
+.startingfive {
+  background: grey; 
+  height: 550px; 
+  background-image: url('/background1.jpg');
+  border-top: 10px solid $main_yellow; 
+}
+
+h4 {
+  font-family: graduate, cursive; 
+  font-size: 20px; 
+  color: $main_yellow;
+}
+
+.heartleft {
+  float: left; 
+
+}
+
+.heartright {
+  float: right; 
+}
+
+p#selected {
+  font-family: $font;
+  color: $main_yellow; 
   font-size: 20px; 
 }
 
 
-#startingfive {
-  background: grey; 
-  background-size: cover; 
-  height: 500px; 
-  width: 100%; 
-}
+
+
+
+
 
 footer {
 
@@ -264,8 +352,6 @@ footer {
   text-align: center;
   position: absolute; 
   bottom: 0; 
-  margin: 0; 
   background-color: green; 
-  border-bottom: 5px solid black; 
 
 }
